src/test/ui/consts/const-eval/index_out_of_bounds_propagated.stderr
error: index out of bounds: the len is 1 but the index is 1
  --> $DIR/index_out_of_bounds_propagated.rs:13:5
   |
LL |     array[1]; //~ ERROR index out of bounds
   |     ^^^^^^^^
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

