src/test/ui/consts/const-eval/index_out_of_bounds_propagated.rs
fn main() {
    let array = [std::env::args().len()];
    array[1]; //~ ERROR index out of bounds
}
